--- a/lib/Makefile
+++ b/lib/Makefile
@@ -285,5 +285,7 @@ obj-$(CONFIG_GENERIC_LIB_CMPDI2) += cmpdi2.o
 obj-$(CONFIG_GENERIC_LIB_UCMPDI2) += ucmpdi2.o
 
 subdir-ccflags-y += -I$(srctree)/lib/lunatik/lua \
+	            -I$(srctree)/lib/luadata/ \
 	            -D_KERNEL
 obj-$(CONFIG_LUNATIK) += lunatik/
+obj-$(CONFIG_LUADATA) += luadata/
