add XDPLua map sample

--- a/samples/bpf/Makefile
+++ b/samples/bpf/Makefile
@@ -111,7 +111,7 @@ xdpsock-objs := xdpsock_user.o
 xdp_fwd-objs := xdp_fwd_user.o
 task_fd_query-objs := bpf_load.o task_fd_query_user.o $(TRACE_HELPERS)
 xdp_sample_pkts-objs := xdp_sample_pkts_user.o $(TRACE_HELPERS)
-# CONFIG_XDPLUA
+# CONFIG_XDP_LUA
 xdplua-objs := xdplua_user.o
 
 # Tell kbuild to always build the programs
@@ -170,6 +170,8 @@ always += xdpsock_kern.o
 always += xdp_fwd_kern.o
 always += task_fd_query_kern.o
 always += xdp_sample_pkts_kern.o
+# CONFIG_XDP_LUA
+always += xdplua_map_kern.o
 
 KBUILD_HOSTCFLAGS += -I$(objtree)/usr/include
 KBUILD_HOSTCFLAGS += -I$(srctree)/tools/lib/
