--- a/net/core/Makefile
+++ b/net/core/Makefile
@@ -8,14 +8,15 @@ obj-y := sock.o request_sock.o skbuff.o datagram.o stream.o scm.o \
 
 obj-$(CONFIG_SYSCTL) += sysctl_net_core.o
 
-CFLAGS_dev.o = -Ilib/lunatik/lua/ -D_KERNEL \
-		-Ilib/luadata/
+CFLAGS_dev.o = -Ilib/lunatik/lua/ -D_KERNEL
 CFLAGS_filter.o = -Ilib/lunatik/lua/ -D_KERNEL \
 		-Ilib/luadata/
+CFLAGS_rtnetlink.o = -Ilib/lunatik/lua/ -D_KERNEL
+CFLAGS_xdplua.o = -Ilib/lunatik/lua/ -Ilib/luadata -D_KERNEL
 obj-y		     += dev.o ethtool.o dev_addr_lists.o dst.o netevent.o \
 			neighbour.o rtnetlink.o utils.o link_watch.o filter.o \
 			sock_diag.o dev_ioctl.o tso.o sock_reuseport.o \
-			fib_notifier.o xdp.o
+			fib_notifier.o xdp.o xdplua.o
 
 obj-y += net-sysfs.o
 obj-$(CONFIG_PAGE_POOL) += page_pool.o
